<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/tipPercentages"
        android:layout_width="378dp"
        android:layout_height="51dp"
        android:layout_marginTop="11dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipPercent"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/radioButton0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:minHeight="48dp"
            android:onClick="onClick"
            android:padding="8dp"
            android:text="12%"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:minHeight="48dp"
            android:onClick="onClick"
            android:padding="8dp"
            android:text="15%" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="onClick"
            android:padding="8dp"
            android:text="18%" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:minHeight="48dp"
            android:onClick="onClick"
            android:padding="8dp"
            android:text="20%" />

    </RadioGroup>

    <TextView
        android:id="@+id/billTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/bill_total_with_tax"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tipPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="31dp"
        android:text="@string/tip_percent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billTotal" />

    <TextView
        android:id="@+id/tipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        android:text="@string/tip_amount"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipPercent" />

    <TextView
        android:id="@+id/totalTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/total_with_tip"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipAmount" />

    <TextView
        android:id="@+id/numberPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/number_of_people"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalTip" />

    <TextView
        android:id="@+id/totalPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/total_per_person"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberPeople" />

    <TextView
        android:id="@+id/overage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/overage"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalPerson" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clearText"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userInput1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#98fb98"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toEndOf="@+id/billTotal"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:onClick="handleText"
        android:text="Go"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalPeople"
        app:layout_constraintStart_toEndOf="@+id/numberPeople" />

    <TextView
        android:id="@+id/displayTotal"
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:layout_marginStart="186dp"
        android:layout_marginTop="30dp"
        android:background="#d3d3d3"
        android:textAlignment="viewStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalTip"
        app:layout_constraintStart_toEndOf="@+id/totalTip"
        app:layout_constraintTop_toBottomOf="@+id/displayTip" />

    <EditText
        android:id="@+id/totalPeople"
        android:layout_width="82dp"
        android:layout_height="32dp"
        android:layout_marginTop="113dp"
        android:background="#98fb98"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipPercentages" />

    <TextView
        android:id="@+id/displayPerPerson"
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:layout_marginStart="164dp"
        android:background="#d3d3d3"
        android:textAlignment="viewStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalPerson"
        app:layout_constraintStart_toEndOf="@+id/totalPerson" />

    <TextView
        android:id="@+id/displayTip"
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:layout_marginStart="201dp"
        android:layout_marginTop="10dp"
        android:background="#d3d3d3"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toEndOf="@+id/tipAmount"
        app:layout_constraintTop_toBottomOf="@+id/tipPercentages" />

    <TextView
        android:id="@+id/costOverage"
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:layout_marginStart="225dp"
        android:background="#d3d3d3"
        android:textAlignment="viewStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/overage"
        app:layout_constraintStart_toEndOf="@+id/overage" />

</androidx.constraintlayout.widget.ConstraintLayout>